# ExtremeDropClassifier

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md
extreme_drop_classifier/: data_exploration.py  data_preprocessing.py  feature_engineering.py  file_handler.py  model_selection.py
models/: README.md
