[tool.poetry]
name = "extreme_drop_classifier"
version = "0.1.0"
description = ""
authors = ["mono <mkobrocka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
#scikit-learn = "^1.4.1.post1"
#pandas = "^2.2.1"
#loguru = "^0.7.2"
#pathlib = "^1.0.1"
sktime = { url = "https://github.com/sktime/sktime/archive/refs/tags/v0.27.0.tar.gz", markers = "python_version >= '3.8' and python_version < '3.13'" }
loguru = "^0.7.2"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
